--- a/src/TerminalSettings/TerminalSettings/MainPage.xaml
+++ b/src/TerminalSettings/TerminalSettings/MainPage.xaml
@@ -21,7 +21,10 @@
                         IsSettingsVisible="False"
                         Loaded="SettingsNav_Loaded"
                         SelectionChanged="SettingsNav_SelectionChanged"
-                        ItemInvoked="SettingsNav_ItemInvoked">
+                        ItemInvoked="SettingsNav_ItemInvoked"
+                        IsBackButtonVisible="Auto"
+                        IsBackEnabled="True"
+                        BackRequested="SettingsNav_BackRequested">
             <muxc:NavigationView.AutoSuggestBox>
                 <AutoSuggestBox PlaceholderText="Search"
                                 QueryIcon="Find"
