--- a/src/TerminalSettings/TerminalSettings/Keybindings.xaml
+++ b/src/TerminalSettings/TerminalSettings/Keybindings.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="TerminalSettings.Keybindings"
+    x:Class="SettingsControl.Keybindings"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TerminalSettings"
+    xmlns:local="using:SettingsControl"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -20,11 +20,12 @@
             <Popup VerticalOffset="10" HorizontalOffset="200" x:Name="StandardPopup">
                 <Border BorderBrush="{StaticResource ApplicationForegroundThemeBrush}" 
                 Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
-                BorderThickness="1" MinWidth="600" MinHeight="300" Margin="10">
+                BorderThickness="1" MinWidth="600" MinHeight="300" MaxHeight="700" Margin="10">
+                    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
                     <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Padding="20">
-                        <TextBlock x:Name="PopupTitleTextBox" Text="Edit" Style="{StaticResource HeaderTextBlockStyle}" Margin="0,0,0,8" />
-                        <TextBlock Text="Command" HorizontalAlignment="Left"/>
-                        <ComboBox HorizontalAlignment="Stretch" Name="CommandComboBox" SelectionChanged="CommandComboBox_SelectionChanged">
+                        <TextBlock x:Name="PopupTitleTextBox" Text="Edit" Style="{StaticResource HeaderTextBlockStyle}" Margin="0,8,0,0" />
+                        <TextBlock Text="Command" HorizontalAlignment="Left" Margin="0,8,0,0" />
+                        <ComboBox HorizontalAlignment="Stretch" Name="CommandComboBox" SelectionChanged="CommandComboBox_SelectionChanged" Margin="0,8,0,0">
                             <!-- Application-level commands -->
                             <ComboBoxItem Content="Close the window" Tag="closeWindow"/>
                             <ComboBoxItem Content="Find" Tag="find"/>
@@ -66,52 +67,39 @@
                         </ComboBox>
 
                         <StackPanel Visibility="Collapsed" Name="OptionalSettingsPanel">
-                            <TextBlock Text="Arguments" />
+                            <TextBlock Text="Arguments" Style="{StaticResource SubheaderTextBlockStyle}" Margin="0,8,0,0"/>
 
-                            <!-- There must be a way to duplicate this -->
-                            <StackPanel x:Name="openSettingsOptionPanel" Visibility="Collapsed" Orientation="Horizontal">
+                            <!-- Args for Open Settings -->
+                            <StackPanel x:Name="openSettingsOptionPanel" Visibility="Collapsed" Orientation="Horizontal" Margin="0,8,0,0">
                                 <TextBlock Text="Target" />
-                                <ComboBox Visibility="Collapsed">
-                                    <ComboBoxItem Content="Target"/>
-                                </ComboBox>
                                 <TextBox Name="OpenSettingsTarget"/>
                             </StackPanel>
 
-                            <!-- There must be a way to duplicate this -->
-                            <StackPanel x:Name="newTabOptionPanel" Visibility="Collapsed" Orientation="Horizontal">
-                                <ComboBox>
-                                    <ComboBoxItem Content="CommandLine" Tag="commandLine"/>
-                                    <ComboBoxItem Content="Starting Directory" Tag="startingDirectory"/>
-                                    <ComboBoxItem Content="Tab Title" Tag="tabTitle"/>
-                                    <ComboBoxItem Content="Index" Tag="index"/>
-                                    <ComboBoxItem Content="Profile" Tag="profile"/>
-                                </ComboBox>
-                                <TextBox Name="newTabTextBox"/>
+                            <!-- Args for New Tab -->
+                            <StackPanel x:Name="newTabOptionPanel" Visibility="Collapsed" Orientation="Vertical" Margin="0,8,0,0">
                             </StackPanel>
 
-                            <!-- There must be a way to duplicate this -->
-                            <StackPanel x:Name="switchToTabOptionPanel" Visibility="Collapsed" Orientation="Horizontal">
+                            <!-- Args for Switch To Tab -->
+                            <StackPanel x:Name="switchToTabOptionPanel" Visibility="Collapsed" Orientation="Horizontal" Margin="0,8,0,0">
                                 <TextBlock Text="Target" />
                                 <TextBox Name="switchToTabIndex"/>
                             </StackPanel>
 
-                            <!-- There must be a way to duplicate this -->
-                            <StackPanel x:Name="renameTabOptionPanel" Visibility="Collapsed" Orientation="Horizontal">
+                            <!-- Args for Rename Tab -->
+                            <StackPanel x:Name="renameTabOptionPanel" Visibility="Collapsed" Orientation="Horizontal" Margin="0,8,0,0">
                                 <TextBlock Text="Title" />
                                 <TextBox Name="renameTabTextBox"/>
                             </StackPanel>
 
-                            <!-- There must be a way to duplicate this -->
-                            <StackPanel x:Name="setTabColorOptionPanel" Visibility="Collapsed" Orientation="Horizontal">
+                            <!-- Args for Set Tab Color -->
+                            <StackPanel x:Name="setTabColorOptionPanel" Visibility="Collapsed" Orientation="Horizontal" Margin="0,8,0,0">
                                 <TextBlock Text="Color" />
                                 <ColorPicker Name="setTabColorTextBox"/>
                             </StackPanel>
 
-                            <!-- There must be a way to duplicate this -->
-                            <StackPanel x:Name="moveResizeFocusOptionPanel" Visibility="Collapsed" Orientation="Horizontal">
-                                <ComboBox>
-                                    <ComboBoxItem Content="Direction"/>
-                                </ComboBox>
+                            <!-- Args for Move Focus and Resize -->
+                            <StackPanel x:Name="moveResizeFocusOptionPanel" Visibility="Collapsed" Orientation="Horizontal" Margin="0,8,0,0">
+                                <TextBlock Text="Direction"/>
                                 <ComboBox>
                                     <ComboBoxItem Content="Left" Tag="left"/>
                                     <ComboBoxItem Content="Right" Tag="right"/>
@@ -120,52 +108,42 @@
                                 </ComboBox>
                             </StackPanel>
 
-                            <!-- There must be a way to duplicate this -->
-                            <StackPanel x:Name="splitPaneOptionPanel" Visibility="Collapsed" Orientation="Horizontal">
-                                <TextBlock Text="Split" />
-                                <ComboBox >
-                                    <ComboBoxItem Content="Vertical" Tag="vertical"/>
-                                    <ComboBoxItem Content="Horizontal" Tag="horizontal"/>
-                                    <ComboBoxItem Content="Auto" Tag="auto"/>
-                                </ComboBox>
-
-                                <ComboBox>
-                                    <ComboBoxItem Content="CommandLine" Tag="commandLine"/>
-                                    <ComboBoxItem Content="Starting Directory" Tag="startingDirectory"/>
-                                    <ComboBoxItem Content="Tab Title" Tag="tabTitle"/>
-                                    <ComboBoxItem Content="Index" Tag="index"/>
-                                    <ComboBoxItem Content="Profile" Tag="profile"/>
-                                    <ComboBoxItem Content="Split Mode" Tag="splitMode"/>
-                                </ComboBox>
-                                
-                                <TextBox Visibility="Collapsed" Name="splitPaneTextBox"/>
-                                <ComboBox Visibility="Collapsed" x:Name="splitPaneComboBox">
-                                    <ComboBoxItem Content="Duplicate" Tag="duplicate" />
-                                </ComboBox>
-
+                            <!-- Args for Split Pane -->
+                            <StackPanel x:Name="splitPaneOptionPanel" Visibility="Collapsed" Orientation="Vertical" Margin="0,8,0,0">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Text="Split" VerticalAlignment="Center" Grid.Column="0"/>
+                                    <ComboBox Name="SplitComboBox" HorizontalAlignment="Stretch" Grid.Column="1">
+                                        <ComboBoxItem Content="Vertical" Tag="vertical"/>
+                                        <ComboBoxItem Content="Horizontal" Tag="horizontal"/>
+                                        <ComboBoxItem Content="Auto" Tag="auto"/>
+                                    </ComboBox>                                    
+                                </Grid>
                             </StackPanel>
 
-                            <!-- There must be a way to duplicate this -->
-                            <StackPanel x:Name="copyOptionPanel" Visibility="Collapsed" Orientation="Horizontal">
+                            <!-- Args for Copy -->
+                            <StackPanel x:Name="copyOptionPanel" Visibility="Collapsed" Orientation="Horizontal" Margin="0,8,0,0">
                                 <CheckBox x:Name="copyCheckBox" Content="Copy text as a single line" />
                             </StackPanel>
 
-                            <!-- There must be a way to duplicate this -->
-                            <StackPanel x:Name="adjustFontSizeOptionPanel" Visibility="Collapsed" Orientation="Horizontal">
-                                <ComboBox>
-                                    <ComboBoxItem Content="Delta" Tag="delta"/>
-                                </ComboBox>
+                            <!-- Args for Adjust Font Size -->
+                            <StackPanel x:Name="adjustFontSizeOptionPanel" Visibility="Collapsed" Orientation="Horizontal" Margin="0,8,0,0">
+                                <TextBlock Text="Delta" />
                                 <TextBox Name="deltaTextBox"/>
                             </StackPanel>
 
-                            <HyperlinkButton Content="+ Add new" Click="HyperlinkButton_Click" Name="AddNewLink"/>
+                            <HyperlinkButton Content="+ Add new" Click="AddNewButton_Click" Name="AddNewLink" />
                         </StackPanel>
 
-                        <TextBlock Text="Keys" HorizontalAlignment="Left"/>
-                        <TextBox Name="asdf" TextChanging="asdf_TextChanging" />
+                        <TextBlock Text="Keys" HorizontalAlignment="Left" Margin="0,8,0,0"/>
+                        <TextBox Name="KeyBindTextBox" TextChanging="KeyBindTextBox_TextChanging" Margin="0,8,0,0"/>
 
-                        <Button Content="Save" HorizontalAlignment="Right"/>
+                        <Button Content="Save" Click="SaveButton_Click" HorizontalAlignment="Right" Margin="0,12,0,0"/>
                     </StackPanel>
+                    </ScrollViewer>
                 </Border>
             </Popup>
         </StackPanel>
