--- a/src/TerminalSettings/TerminalSettings/Rendering.xaml
+++ b/src/TerminalSettings/TerminalSettings/Rendering.xaml
@@ -19,12 +19,11 @@
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
         <TextBlock Text="Rendering"
-                   Style="{StaticResource HeaderTextBlockStyle}"
-                   Margin="0,0,0,10" />
+                   Style="{StaticResource SubheaderTextBlockStyle}"
+                   Margin="0,0,0,20" />
         <StackPanel Grid.Row="1" Grid.Column="0" Margin="0,0,100,0">
-            <CheckBox IsChecked="{x:Bind GlobalSettingsModel.GlobalSettings.SnapToGridOnResize, Mode=TwoWay}" Content="Windows resize behavior" />
-            <CheckBox IsChecked="{x:Bind GlobalSettingsModel.GlobalSettings.ForceFullRepaintRendering, Mode=TwoWay}" Content="Screen redrawing" />
-            <CheckBox IsChecked="{x:Bind GlobalSettingsModel.GlobalSettings.SoftwareRendering, Mode=TwoWay}" Content="Software rendering" />
+            <CheckBox IsChecked="{x:Bind GlobalSettingsModel.GlobalSettings.ForceFullRepaintRendering, Mode=TwoWay}" Content="Screen redrawing" Margin="0,0,0,20" FontSize="15" ToolTipService.ToolTip="When checked, the terminal will redraw the entire screen each frame. When unchecked, the terminal will render only the updates to the screen between frames." ToolTipService.Placement="Mouse" />
+            <CheckBox IsChecked="{x:Bind GlobalSettingsModel.GlobalSettings.SoftwareRendering, Mode=TwoWay}" Content="Software rendering" Margin="0,0,0,20" FontSize="15" ToolTipService.ToolTip="When checked, the terminal will use the software renderer (a.k.a. WARP) instead of the hardware one." ToolTipService.Placement="Mouse" />
         </StackPanel>
     </Grid>
 </Page>
