--- a/src/cascadia/TerminalSettingsEditor/App.xaml
+++ b/src/cascadia/TerminalSettingsEditor/App.xaml
@@ -1,4 +1,6 @@
-﻿<Application
+﻿<!-- Copyright (c) Microsoft Corporation. All rights reserved. Licensed under
+the MIT License. See LICENSE in the project root for license information. -->
+<Application
     x:Class="SettingsControl.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
