--- a/src/cascadia/TerminalSettingsEditor/App.xaml
+++ b/src/cascadia/TerminalSettingsEditor/App.xaml
@@ -1,10 +1,10 @@
 ﻿<!-- Copyright (c) Microsoft Corporation. All rights reserved. Licensed under
 the MIT License. See LICENSE in the project root for license information. -->
 <Application
-    x:Class="SettingsControl.App"
+    x:Class="Microsoft.Terminal.Settings.Editor.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SettingsControl">
+    xmlns:local="using:Microsoft.Terminal.Settings.Editor">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
