--- a/src/cascadia/TerminalSettingsEditor/SplitPaneOptionPanelControl.xaml
+++ b/src/cascadia/TerminalSettingsEditor/SplitPaneOptionPanelControl.xaml
@@ -1,10 +1,10 @@
 ﻿<!-- Copyright (c) Microsoft Corporation. All rights reserved. Licensed under
 the MIT License. See LICENSE in the project root for license information. -->
 <UserControl
-    x:Class="SettingsControl.SplitPaneOptionPanelControl"
+    x:Class="Microsoft.Terminal.Settings.Editor.SplitPaneOptionPanelControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SettingsControl"
+    xmlns:local="using:Microsoft.Terminal.Settings.Editor"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
