--- a/src/cascadia/TerminalControl/TermControl.xaml
+++ b/src/cascadia/TerminalControl/TermControl.xaml
@@ -49,9 +49,9 @@
                                 SizeChanged="_SwapChainSizeChanged"
                                 CompositionScaleChanged="_SwapChainScaleChanged">
 
-                    <Canvas x:Name="SubCanvas"
+                    <Canvas x:Name="OverlayCanvas"
                             Visibility="Visible">
-                        <Border x:Name="SubBorder"
+                        <Border x:Name="HyperlinkTooltipBorder"
                                 BorderBrush="Transparent">
                             <ToolTipService.ToolTip>
                                 <ToolTip x:Name="LinkTip"
