fontstyle left in xaml file

--- a/src/cascadia/TerminalControl/TermControl.xaml
+++ b/src/cascadia/TerminalControl/TermControl.xaml
@@ -58,7 +58,9 @@
                                          Placement="Mouse">
                                     <TextBlock IsTextSelectionEnabled="True">
                                         <Run x:Name="HoveredUri"/> <LineBreak />
-                                        <Run x:Uid="HowToOpenRun" />
+                                        <Run x:Uid="HowToOpenRun"
+                                             FontStyle="Italic">
+                                        </Run>
                                     </TextBlock>
                                 </ToolTip>
                             </ToolTipService.ToolTip>
