TODOs, cleanups, namespaces

--- a/src/cascadia/TerminalSettingsEditor/ColorSchemes.xaml
+++ b/src/cascadia/TerminalSettingsEditor/ColorSchemes.xaml
@@ -40,6 +40,8 @@ the MIT License. See LICENSE in the project root for license information. -->
                 </DropDownButton.Flyout>
             </Windows10version1809:DropDownButton>
         </StackPanel>
+
+        <!--TODO: SETTINGSUI make sure the color flyouts are all as one control, not separate-->
         <StackPanel Grid.Row="2"
                     Grid.Column="0">
             <StackPanel Orientation="Horizontal"
