--- a/src/cascadia/TerminalSettingsEditor/CommonResources.xaml
+++ b/src/cascadia/TerminalSettingsEditor/CommonResources.xaml
@@ -67,6 +67,7 @@
     <Thickness x:Key="StandardControlMargin">0,24,0,0</Thickness>
     <x:Double x:Key="StandardBoxMinWidth">250</x:Double>
     <x:Double x:Key="StandardControlMaxWidth">1000</x:Double>
+    <Thickness x:Key="SettingStackMargin">13,0,13,48</Thickness>
 
     <!--
         This is for styling the entire items control used on the
@@ -80,13 +81,13 @@
     <!--  Used to stack a group of settings  -->
     <Style x:Key="SettingsStackStyle"
            TargetType="StackPanel">
-        <Setter Property="Margin" Value="13,0,13,48" />
+        <Setter Property="Margin" Value="{StaticResource SettingStackMargin}" />
     </Style>
 
     <!--  Used to stack a group of settings inside a pivot  -->
     <Style x:Key="PivotStackStyle"
            TargetType="StackPanel">
-        <Setter Property="Margin" Value="0,0,13,48" />
+        <Setter Property="Margin" Value="{StaticResource SettingStackMargin}" />
     </Style>
 
     <!--  Combo Box  -->
